cartas poseen instancias de paises, cambios de respectivas pruebas