@@ -1,14 +1,13 @@
 package edu.fiuba.algo3;
 
 import edu.fiuba.algo3.elementos.Carta;
-import edu.fiuba.algo3.elementos.CartaNoActivada;
 import edu.fiuba.algo3.elementos.Jugador;
 import edu.fiuba.algo3.elementos.Pais;
 import edu.fiuba.algo3.excepciones.CartaYaActivadaException;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -17,34 +16,35 @@ public class CartaTest {
     @Test
     public void ActivarUnaCartaDeUnPaisQueTePerteneceFuncionaCorrectamente() throws CartaYaActivadaException {
         Jugador jugador = new Jugador("Pepe");
-        Pais pais = new Pais("Argentina", new ArrayList<>(Arrays.asList("Brasil")));
-        Carta carta = new Carta("Argentina", "Comodin");
-        jugador.agregarPais(pais);
+        Pais argentina = new Pais("Argentina", new ArrayList<>(List.of("Brasil")));
+        Carta carta = new Carta(argentina, "Comodin");
+        jugador.agregarPais(argentina);
         jugador.darleCarta(carta);
-        carta.activarse(new ArrayList<Pais>(Arrays.asList(pais)), jugador);
-        assertEquals(2, pais.getCantidadEjercitos());
+        carta.activarse(jugador);
+        assertEquals(2, argentina.getCantidadEjercitos());
     }
 
     @Test
     public void NoSePuedeActivarUnaCartaDeUnPaisQueNoTePertenece() throws CartaYaActivadaException {
         Jugador jugador = new Jugador("Pepe");
-        Pais pais = new Pais("Brasil", new ArrayList<>(Arrays.asList("Argentina")));
-        Carta carta = new Carta("Argentina", "Comodin");
-        jugador.agregarPais(pais);
+        Pais brasil = new Pais("Brasil", new ArrayList<>(List.of("Argentina")));
+        Pais argentina = new Pais("Argentina", new ArrayList<>(List.of("Brasil")));
+        Carta carta = new Carta(argentina, "Comodin");
+        jugador.agregarPais(brasil);
         jugador.darleCarta(carta);
-        assertNotEquals(2, pais.getCantidadEjercitos());
+        assertNotEquals(2, brasil.getCantidadEjercitos());
     }
 
     @Test
     public void intentarActivarUnaCartaYaActivadaLanzaUnaExcepcion() throws CartaYaActivadaException {
         Jugador jugador = new Jugador("Pepe");
-        Pais pais = new Pais("Argentina", new ArrayList<>(Arrays.asList("Brasil")));
-        Carta carta = new Carta("Argentina", "Comodin");
-        jugador.agregarPais(pais);
+        Pais argentina = new Pais("Argentina", new ArrayList<>(List.of("Brasil")));
+        Carta carta = new Carta(argentina, "Comodin");
+        jugador.agregarPais(argentina);
         jugador.darleCarta(carta);
-        carta.activarse(new ArrayList<Pais>(Arrays.asList(pais)), jugador);
+        carta.activarse(jugador);
         assertThrows(CartaYaActivadaException.class, ()->{
-            carta.activarse(new ArrayList<Pais>(Arrays.asList(pais)), jugador);
+            carta.activarse(jugador);
         });
     }
 }
